# graphilt

./: .gitignore  CMakeLists.txt  README.txt
cmake/modules/: FindNumPy.cmake  FindReadLine.cmake  boost-python.cmake
doc/: Doxyfile  Doxyfile.in
python/: CMakeLists.txt
python/graphilt/: CMakeLists.txt
python/wrapper/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  main.cpp
src/core/: Engine.cpp  Engine.h  FilterFactory.h  Func.h
src/io/: matrix-io.h  parsers.h  vector-io.h
src/io/parser/: snap.h
src/util/: benchmark.h  log.cpp  log.h  maths.h
tests/: CMakeLists.txt  EngineTest.cpp  FilterTest.cpp  MathsTest.cpp  SnapParser.cpp
tools/: CMakeLists.txt  demo1.cpp  downsample.cpp  plateformInfo.cpp
